<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/filter_selected_cardviews"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="5dp"
    android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/filter_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:text="@string/default_filterview_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/sorted_list_selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deactivate_filter"/>

        <TextView
            android:id="@+id/deactivate_filter"
            android:background="@color/light_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/deactivate_filter"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/deactivate_sorted_list"
            android:background="@color/light_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel_sorted_list"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sorted_list_selected"
            android:layout_width="0dp"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/sort_by_hour_default"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deactivate_sorted_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>
